--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,8 @@
 body{
-    background-color: #0084ff;
+    /* background-color: #0084ff; */
+    background-image: url(./images/prayer.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: rgb(248, 247, 247);
 }
